--- a/Project_1B_ Project.ipynb
+++ b/Project_1B_ Project.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,11 +196,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO-DO: Create a Keyspace \n",
     "try:\n",
     "    session.execute(\"\"\"\n",
     "    CREATE KEYSPACE IF NOT EXISTS sparkify \n",
@@ -221,11 +220,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO-DO: Set KEYSPACE to the keyspace specified above\n",
     "try:\n",
     "    session.set_keyspace('sparkify')\n",
     "except Exception as e:\n",
@@ -258,45 +256,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TO-DO: Query 1:  Give me the artist, song title and song's length in the music app history that was heard during \\\n",
+    "## Query 1: Give me the artist, song title and song's length in the music app history that was heard during \\\n",
     "## sessionId = 338, and itemInSession = 4\n",
+    "## Description: Here the primary key has two fields. The sessionId is the partition key and itemInSession is the clustering key. Partition is\n",
+    "## is done by the sessionId and within that partition the rows are sorted by iteminSession.\n",
     "query1 = \"CREATE TABLE IF NOT EXISTS music_history \"\n",
-    "query1 = query1 + \"(sessionId int, itemInSession int, artist text, song_title text, song_length text, PRIMARY KEY (sessionId, itemInSession, artist))\"\n",
+    "query1 = query1 + \"(sessionid int, iteminSession int, artist text, song_title text, song_length float, PRIMARY KEY (sessionid, iteminSession))\"\n",
     "try:\n",
     "    session.execute(query1)\n",
     "except Exception as e:\n",
     "    print(e)\n",
-    "\n",
-    "#session.shutdown()\n",
-    "#cluster.shutdown()\n",
     "                    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "# We have provided part of the code to set up the CSV file. Please complete the Apache Cassandra code below#\n",
     "file = 'event_datafile_new.csv'\n",
     "\n",
     "with open(file, encoding = 'utf8') as f:\n",
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
-    "## TO-DO: Assign the INSERT statements into the `query` variable\n",
-    "        query = \"INSERT INTO music_history (sessionId, itemInSession, artist, song_title, song_length)\"\n",
+    "        query = \"INSERT INTO music_history (sessionid, iteminSession, artist, song_title, song_length)\"\n",
     "        query = query + \"VALUES (%s, %s, %s, %s, %s)\"\n",
-    "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
-    "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
-    "        session.execute(query, (int(line[8]), int(line[3]), line[0], line[9], line[5]))"
+    "        session.execute(query, (int(line[8]), int(line[3]), line[0], line[9], float(line[5])))"
    ]
   },
   {
@@ -308,12 +301,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO-DO: Add in the SELECT statement to verify the data was entered into the table\n",
-    "query = \"select artist, song_title, song_length from music_history where sessionId = 338 and itemInSession = 4\"\n",
+    "query = \"select artist, song_title, song_length from music_history where sessionid = 338 and iteminSession = 4\"\n",
     "try:\n",
     "    rows = session.execute(query)\n",
     "except Exception as e:\n",
@@ -332,78 +324,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TO-DO: Query 2: Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name)\\\n",
+    "## Query 2: Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name)\\\n",
     "## for userid = 10, sessionid = 182\n",
-    "\n",
+    "## Desription: Here the primary key is defined by three columns. The sessionid & userid are the partition keys and the iteminSession is\n",
+    "## the clustering key. The data is partitioned by the combination of sessionid & userid and each of these partitions is sorted by iteminSession. \n",
     "query1 = \"CREATE TABLE IF NOT EXISTS song_user_session \"\n",
-    "query1 = query1 + \"(sessionId int,itemInSession int,artist text,song text,firstName text,lastName text,userid int,PRIMARY KEY ((userid,sessionId),itemInSession))\"\n",
+    "query1 = query1 + \"(sessionid int, userid int, iteminSession int, artist text, song text, firstname text, lastname text, PRIMARY KEY ((sessionid,userid),iteminSession))\"\n",
     "try:\n",
     "    session.execute(query1)\n",
     "except Exception as e:\n",
     "    print(e)\n",
     "\n",
-    "# We have provided part of the code to set up the CSV file. Please complete the Apache Cassandra code below#\n",
     "file = 'event_datafile_new.csv'\n",
     "\n",
     "with open(file, encoding = 'utf8') as f:\n",
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
-    "## TO-DO: Assign the INSERT statements into the `query` variable\n",
-    "        query = \"INSERT INTO song_user_session (sessionId,itemInSession,artist,song,firstName,lastName,userid)\"\n",
+    "        query = \"INSERT INTO song_user_session (sessionid, userid, iteminSession, artist, song, firstname, lastname)\"\n",
     "        query = query + \"VALUES (%s,%s,%s,%s,%s,%s,%s)\"\n",
-    "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
-    "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
-    "        session.execute(query, (int(line[8]),int(line[3]),line[0],line[9],line[1],line[4],int(line[10])))\n",
+    "        session.execute(query, (int(line[8]), int(line[10]), int(line[3]), line[0], line[9], line[1], line[4]))\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Row' object has no attribute 'firstName'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-25235a5ce69f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrows\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0martist\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msong\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfirstName\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlastName\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Row' object has no attribute 'firstName'"
-     ]
-    }
-   ],
-   "source": [
-    "## TO-DO: Add in the SELECT statement to verify the data was entered into the table\n",
-    "query = \"select artist,song,firstName,lastName from song_user_session \\\n",
-    "where userid = 10 and sessionId = 182 ORDER BY itemInSession\"\n",
-    "try:\n",
-    "    rows = session.execute(query)\n",
-    "except Exception as e:\n",
-    "    print(e)\n",
-    "for row in rows:\n",
-    "    print (row.artist,row.song,row.firstName,row.lastName)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Down To The Bone Keep On Keepin' On Sylvie Cruz\n",
+      "Three Drives Greece 2000 Sylvie Cruz\n",
+      "Sebastien Tellier Kilometer Sylvie Cruz\n",
+      "Lonnie Gordon Catch You Baby (Steve Pitron & Max Sanna Radio Edit) Sylvie Cruz\n"
+     ]
+    }
+   ],
    "source": [
-    "## TO-DO: Query 3: Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
-    "query1 = \"CREATE TABLE IF NOT EXISTS song_listened \"\n",
-    "query1 = query1 + \"(song text,firstName text,lastName text,PRIMARY KEY (song,firstName,lastName))\"\n",
+    "query = \"select artist, song, firstname, lastname from song_user_session where sessionid = 182 and userid = 10 ORDER BY iteminSession\"\n",
     "try:\n",
-    "    session.execute(query1)\n",
+    "    rows = session.execute(query)\n",
     "except Exception as e:\n",
-    "    print(e)                    "
+    "    print(e)\n",
+    "for row in rows:\n",
+    "    print(row.artist, row.song, row.firstname, row.lastname)"
    ]
   },
   {
@@ -412,29 +383,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We have provided part of the code to set up the CSV file. Please complete the Apache Cassandra code below#\n",
+    "## Query 3: Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
+    "## Description: Here the primary key is defined by two columns. The song is the partition key and userid is the clustering key. The data is\n",
+    "## partitioned by the song column and each partition is sorted by userid. The userid is used because there can be multiple users with the same\n",
+    "## first and last names.\n",
+    "query1 = \"CREATE TABLE IF NOT EXISTS song_listened \"\n",
+    "query1 = query1 + \"(song text, userid int, firstname text, lastname text, PRIMARY KEY (song, userid))\"\n",
+    "try:\n",
+    "    session.execute(query1)\n",
+    "except Exception as e:\n",
+    "    print(e)                    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "file = 'event_datafile_new.csv'\n",
     "\n",
     "with open(file, encoding = 'utf8') as f:\n",
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
-    "## TO-DO: Assign the INSERT statements into the `query` variable\n",
-    "        query = \"INSERT INTO song_listened (song,firstName,lastName)\"\n",
-    "        query = query + \"VALUES (%s,%s,%s)\"\n",
-    "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
-    "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
-    "        session.execute(query, (line[9],line[1],line[4]))"
+    "        query = \"INSERT INTO song_listened (song, userId, firstName, lastName)\"\n",
+    "        query = query + \"VALUES (%s, %s, %s, %s)\"\n",
+    "        session.execute(query, (line[9], int(line[10]), line[1], line[4]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TO-DO: Add in the SELECT statement to verify the data was entered into the table\n",
-    "query = \"select song,firstName,lastName from song_listened where song = 'All Hands Against His Own'\"\n",
+    "query = \"select song, firstName, lastName from song_listened where song = 'All Hands Against His Own'\"\n",
     "try:\n",
     "    rows = session.execute(query)\n",
     "except Exception as e:\n",
@@ -453,16 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## TO-DO: Drop the table before closing out the sessions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
